--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\VICKY\AppData\Local\Temp\testng-eclipse-1441645495\testng-customsuite.xml</span>
+                    <span>C:\Users\VICKY\AppData\Local\Temp\testng-eclipse-1965262602\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,22 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day1.GetRequest" class="method navigator-link" hash-for-method="createUser">createUser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day1.GetRequest" class="method navigator-link" hash-for-method="deleteUser">deleteUser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day1.GetRequest" class="method navigator-link" hash-for-method="getRequest">getRequest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day1.GetRequest" class="method navigator-link" hash-for-method="updateUser">updateUser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="day4.JSONResponse_SearchingSpecificElement" class="method navigator-link" hash-for-method="testJSONResponseBody">testJSONResponseBody</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -136,35 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">day1.GetRequest</span>
+              <span class="class-name">day4.JSONResponse_SearchingSpecificElement</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createUser">
-                  </a> <!-- createUser -->
-                  <span class="method-name">createUser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="deleteUser">
-                  </a> <!-- deleteUser -->
-                  <span class="method-name">deleteUser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getRequest">
-                  </a> <!-- getRequest -->
-                  <span class="method-name">getRequest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="updateUser">
-                  </a> <!-- updateUser -->
-                  <span class="method-name">updateUser</span>
+                  <a name="testJSONResponseBody">
+                  </a> <!-- testJSONResponseBody -->
+                  <span class="method-name">testJSONResponseBody</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -172,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\VICKY\AppData\Local\Temp\testng-eclipse-1441645495\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\VICKY\AppData\Local\Temp\testng-eclipse-1965262602\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -181,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;day1.GetRequest&quot;/&gt;
+      &lt;class name=&quot;day4.JSONResponse_SearchingSpecificElement&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -221,28 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getRequest')
-data.setCell(0, 2, 'day1.GetRequest')
-data.setCell(0, 3, 3965);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'createUser')
-data.setCell(1, 2, 'day1.GetRequest')
-data.setCell(1, 3, 1658);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'updateUser')
-data.setCell(2, 2, 'day1.GetRequest')
-data.setCell(2, 3, 1385);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'deleteUser')
-data.setCell(3, 2, 'day1.GetRequest')
-data.setCell(3, 3, 1025);
+data.setCell(0, 1, 'testJSONResponseBody')
+data.setCell(0, 2, 'day4.JSONResponse_SearchingSpecificElement')
+data.setCell(0, 3, 13456);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -268,22 +220,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">day1.GetRequest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">day4.JSONResponse_SearchingSpecificElement</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">getRequest</span>
+                <span class="method-name">testJSONResponseBody</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">createUser</span>
-                <span class="method-start">3978 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">updateUser</span>
-                <span class="method-start">5640 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">deleteUser</span>
-                <span class="method-start">7028 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
