--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\VICKY\AppData\Local\Temp\testng-eclipse--1766952714\testng-customsuite.xml</span>
+                    <span>C:\Users\VICKY\AppData\Local\Temp\testng-eclipse--1111234686\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day2.PostRequestWays_JSONObject" class="method navigator-link" hash-for-method="createUserData1">createUserData1</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="day2.PostRequestWays_JSONObject" class="method navigator-link" hash-for-method="deleteUSeerData">deleteUSeerData</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="day3.LoggingDemo" class="method navigator-link" hash-for-method="testCookies">testCookies</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">day2.PostRequestWays_JSONObject</span>
+              <span class="class-name">day3.LoggingDemo</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createUserData1">
-                  </a> <!-- createUserData1 -->
-                  <span class="method-name">createUserData1</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="deleteUSeerData">
-                  </a> <!-- deleteUSeerData -->
-                  <span class="method-name">deleteUSeerData</span>
+                  <a name="testCookies">
+                  </a> <!-- testCookies -->
+                  <span class="method-name">testCookies</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\VICKY\AppData\Local\Temp\testng-eclipse--1766952714\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\VICKY\AppData\Local\Temp\testng-eclipse--1111234686\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;day2.PostRequestWays_JSONObject&quot;/&gt;
+      &lt;class name=&quot;day3.LoggingDemo&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -197,20 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createUserData1')
-data.setCell(0, 2, 'day2.PostRequestWays_JSONObject')
-data.setCell(0, 3, 6012);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'deleteUSeerData')
-data.setCell(1, 2, 'day2.PostRequestWays_JSONObject')
-data.setCell(1, 3, 1016);
+data.setCell(0, 1, 'testCookies')
+data.setCell(0, 2, 'day3.LoggingDemo')
+data.setCell(0, 3, 4688);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -236,14 +220,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">day2.PostRequestWays_JSONObject</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">day3.LoggingDemo</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">createUserData1</span>
+                <span class="method-name">testCookies</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">deleteUSeerData</span>
-                <span class="method-start">6026 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
